fixed last element that needed contrast fix

--- a/style.css
+++ b/style.css
@@ -79,20 +79,14 @@ body {
 	padding: .5rem calc((100% - 50rem) / 2);
 }
 
-.header a {
-  color: var(--lightblue);
-}
-
-.header span {
-  color: var(--darkblue);
-}
-
 .header a, .header span {
+  color: var(--darkblue);
   text-decoration: none;
   font-size: 1.2rem;
 }
 
 .header a:first-child {
+  color: var(--lightblue);
 	margin-left: 0;
   margin-right: 8rem;
 }
